--- a/views/view-member.html
+++ b/views/view-member.html
@@ -86,60 +86,7 @@
                     </p>
                 </div>
             </div>
-            <div id="table-payments">
-
-                
-               <!--  <div class="table-section-individual">
-                    <div class="table-section-individual-header">
-                        <div class="col-1">
-                            <p>Date</p>
-                        </div>
-                        <div class="col-2">
-                            <p>Description</p>
-                        </div>
-                        <div class="col-3">
-                            <p>Cost £</p>
-                        </div>
-                        <div class="col-4">
-                            <p>Due £</p>
-                        </div>
-                        <div class="col-5">
-                            <p>Reference</p>
-                        </div>
-                        <div class="col-6">
-                            <p>Notes</p>
-                        </div>
-                        <div class="col-7">
-                            <p>Delete</p>
-                        </div>
-                    </div>
-                    <div class="table-section-individual-rows">
-                        <div class="row">
-                            <div class="col-1">
-                                <p>21/11/1990</p>
-                            </div>
-                            <div class="col-2">
-                                <p>Events</p>
-                            </div>
-                            <div class="col-3">
-                                <p>90 £</p>
-                            </div>
-                            <div class="col-4">
-                                <p>100 £</p>
-                            </div>
-                            <div class="col-5">
-                                <p>78942</p>
-                            </div>
-                            <div class="col-6">
-                                <p>Hello world</p>
-                            </div>
-                            <div class="col-7">
-                                <p>Click</p>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
-            </div>
+            <div id="table-payments"></div>
         </div>
         <div class="actions-container">
             <div class="refund-section"></div>
