--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -479,13 +479,23 @@ nav {
   margin-top: 10px;
   display: flex;
   align-items: center;
-  justify-content: center; }
+  justify-content: center;
+  padding: 0 20px; }
 
 .delete-section {
   background-color: #fff;
   width: 100%;
-  height: 15%;
   margin: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 20px; }
+
+.title-ctrl {
+  justify-content: center;
+  margin-bottom: 10px; }
+
+.body-ctrl {
   display: flex;
   align-items: center;
   justify-content: center; }
@@ -493,7 +503,6 @@ nav {
 .refund-section {
   background-color: #fff;
   width: 100%;
-  height: 25%;
   margin: 5px;
   display: flex;
   align-items: center;
@@ -508,7 +517,6 @@ nav {
 .add-donation-section {
   background-color: #fff;
   width: 100%;
-  height: 40%;
   margin: 5px;
   margin-bottom: 10px;
   display: flex;
@@ -584,6 +592,12 @@ div.gbp {
   display: flex;
   flex-direction: column;
   flex: 1; }
+  #status-controls .member-type-section {
+    flex: 1;
+    display: flex;
+    flex-direction: column; }
+  #status-controls .delete-section {
+    flex: 1; }
 
 .refund-section {
   flex: 1; }
