--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -236,23 +236,33 @@ $color: #ededed;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	padding: 0 20px;
 }
 
 .delete-section {
 	background-color: #fff;
 	width: 100%;
-	height: 15%;
 	margin: 5px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	padding: 0 20px;
+}
+
+.title-ctrl {
+	justify-content: center;
+	margin-bottom: 10px;
+}
+
+.body-ctrl {
 	display: flex;
 	align-items: center;
 	justify-content: center;
 }
 
-
 .refund-section {
 	background-color: #fff;
 	width: 100%;
-	height: 25%;
 	margin: 5px;
 	display: flex;
 	align-items: center;
@@ -270,7 +280,6 @@ $color: #ededed;
 .add-donation-section {
 	background-color: #fff;
 	width: 100%;
-	height: 40%;
 	margin: 5px;
 	margin-bottom: 10px;
 	display: flex;
@@ -370,6 +379,14 @@ div.gbp {
 	display: flex;
 	flex-direction: column;
 	flex: 1;
+	.member-type-section {
+		flex: 1;
+		display: flex;
+		flex-direction: column;
+	}
+	.delete-section {
+		flex: 1;
+	}
 }
 
 .refund-section {
