date payments and component show info member

--- a/views/view-member.html
+++ b/views/view-member.html
@@ -17,7 +17,9 @@
                     <h2>Personal info</h2>
                     <p>
                         <span class="info">Name:</span>
-                        {{member.title}}&nbsp;{{member.firstName}}&nbsp;{{member.initials}}&nbsp;{{member.lastName}}
+                        <span>
+                            {{member.title}}&nbsp;{{member.firstName}}&nbsp;{{member.initials}}&nbsp;{{member.lastName}}
+                        </span>
                     </p>
                     <p>
                         <span class="info">Member id:</span>
