--- a/views/view-member.html
+++ b/views/view-member.html
@@ -12,82 +12,7 @@
     </ul>
     <div class="overall-container">
         <div class="content-container">
-            <div class="individual-section">
-                <div class="col-1">
-                    <h2>Personal info</h2>
-                    <p>
-                        <span class="info">Name:</span>
-                        <span>
-                            {{member.title}}&nbsp;{{member.firstName}}&nbsp;{{member.initials}}&nbsp;{{member.lastName}}
-                        </span>
-                    </p>
-                    <p>
-                        <span class="info">Member id:</span>
-                        {{member.id}}
-                    </p>
-                    <p>
-                        <span class="info">Birthday:</span>
-                        {{member.birthday}}
-                    </p>
-                    <p><span class="info">Emails:</span></p>
-                    <p>Primary: {{member.email1}}</p>
-                    <p>Secondary: {{member.email2}}</p>
-                    <p>
-                        <span class="info">Bounced:</span>
-                        {{member.emailBounced}}
-                    </p>
-                    <p>
-                        <span class="info">Online:</span>
-                        {{member.onlineMember}}
-                    </p>
-                    <p><span class="info">Status:</span>
-                        {{member.status}}
-                    </p>
-                    <p>
-                        <span class="info">Deletion date:</span>
-                        {{member.deletionDate}}</p>
-                    <p>
-                        <span class="info">Deletion reason:</span>
-                        {{member.deletionReason}}
-                    </p>
-                </div>
-                <div class="col-2">
-                    <h2>Address info</h2>
-                    <p> {{member.address1}}<br>
-                        {{member.address2}}<br>
-                        {{member.address3}}<br>
-                        {{member.address4}}<br>
-                        {{member.county}}<br>
-                        {{member.postcode}}<br>
-                        {{member.deliverer}}<br>
-                    </p>
-                </div>
-                <div class="col-3">
-                    <h2>Membership info</h2>
-                    <p>
-                        <span class="info">Date joined:</span>
-                        {{member.dateJoined}}</p>
-                    <p>
-                        <span class="info">Membership type:</span>
-                        {{member.membershipType}}
-                    </p>
-                    <p>
-                        <span class="info">Membership changed date:</span>
-                        {{member.dateTypeChanged}}</p>
-                    <p>
-                        <span class="info">Life payment:</span>
-                        {{member.lifePaymentDate}}
-                    </p>
-                    <p><span class="info">Gift Aid:</span></p>
-                    <p>Signed: {{member.giftAid}}</p>
-                    <p>Signed date: {{member.dateGiftAidSigned}}</p>
-                    <p>Cancelled: {{member.dateGiftAidCancelled}}</p>
-                    <p>
-                        <span class="info">Standing order:</span>
-                        {{member.standingOrder}}
-                    </p>
-                </div>
-            </div>
+            <div id="member-info"></div>
             <div id="table-payments"></div>
         </div>
         <div class="actions-container">
