--- a/views/view-member.html
+++ b/views/view-member.html
@@ -1,4 +1,4 @@
-<div class="full-screen-fixed">
+<div class="full-screen-fixed-members">
     <!-- Navbar here -->
     <ul class="navigation">
         <li><a href="/admin">Home</a></li>
@@ -10,18 +10,18 @@
         <li><a href="#">Reports</a></li>
         <li><a href="#">Emails</a></li>
     </ul>
-    <div class="overall-container">
-        <div class="content-container">
-            <div id="member-info"></div>
-            <div id="table-payments"></div>
-        </div>
-        <div class="actions-container">
-            <div class="refund-section"></div>
-            <div class="add-donation-section"></div>
-        </div>
-    </div>
-    <div class="enter-payment-section"></div>
     <p id="member-id" style="display:none">{{member.id}}</p>
     <p id="member-status" style="display:none">{{member.status}}</p>
     <p id="member-type" style="display:none">{{member.membershipType}}</p>
 </div>
+
+
+
+
+
+
+
+
+
+
+
