--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -10,7 +10,7 @@
 }
 
 .overall-container {
-	bottom: 60px;
+	bottom: 70px;
 	position: fixed;
 	left: 0;
 	right: 0;
@@ -29,7 +29,7 @@
 	padding-right: 15px;
 }
 
-.individual-section {
+#member-info {
 	width: 100%;
 	height: 40%;
 	background-color: #fff;
@@ -37,6 +37,7 @@
 	display: flex;
 	text-align: left;
 	padding: 20px;
+	overflow: scroll;
 	p {
 		font-size: 15px;
 		margin-bottom: 5px;
@@ -55,19 +56,54 @@
 		min-height: 100px;
 	}
 }
+// .individual-section {
+// 	width: 100%;
+// 	height: 40%;
+// 	background-color: #fff;
+// 	margin: 10px;
+// 	display: flex;
+// 	text-align: left;
+// 	padding: 20px;
+// 	p {
+// 		font-size: 15px;
+// 		margin-bottom: 5px;
+// 		margin-top: 5px; 
+// 	}
+// 	.col-1 {
+// 		width: 40%;
+// 		min-height: 100px;
+// 	}
+// 	.col-2 {
+// 		width: 40%;
+// 		min-height: 100px;
+// 	}
+// 	.col-3 {
+// 		width: 40%;
+// 		min-height: 100px;
+// 	}
+// }
 
 $color: #ededed;
 
-.table-section-individual {
+// .table-section-individual {
+// 	width: 100%;
+// 	height: 60%;
+// 	background-color: #fff;
+// 	margin: 10px;
+// 	padding: 10px;
+#table-payments {
 	width: 100%;
 	height: 60%;
 	background-color: #fff;
 	margin: 10px;
+	margin-top: 0;
 	padding: 10px;
+	overflow: scroll;
 	.table-section-individual-header {
 		display: flex;
 		width: 100%;
 		height: 60px;
+		text-align: center;
 		p {
 			font-size: 20px;
 			font-weight: bold;
@@ -101,39 +137,43 @@ $color: #ededed;
 		}
 	}
 	.table-section-individual-rows {
-		height: 25em;
+		// height: 25em;
 		overflow: scroll;
 		.row {
 			display: flex;
 			width: 100%;
 			height: 60px;
-			p {font-size: 15px;}
+			p {
+				font-size: 15px;
+				padding: 5px;
+				text-align: center;
+			}
 			.col-1 {
-				width: 20%;
+				flex: 1;
 				border-right: 1px solid $color;
 			}
 			.col-2 {
-				width: 20%;
+				flex: 1;
 				border-right: 1px solid $color;
 			}
 			.col-3 {
-				width: 20%;
+				flex: 1;
 				border-right: 1px solid $color;
 			}
 			.col-4 {
-				width: 20%;
+				flex: 1;
 				border-right: 1px solid $color;
 			}
 			.col-5 {
-				width: 20%;
+				flex: 1;
 				border-right: 1px solid $color;
 			}
 			.col-6 {
-				width: 20%;
+				flex: 1;
 				border-right: 1px solid $color;
 			}
 			.col-7 {
-				width: 20%;
+				flex: 1;
 			}
 		}
 	}
@@ -297,13 +337,13 @@ $color: #ededed;
 }
 
 .enter-payment-section {
-	bottom: 10px;
+	bottom: 0;
 	width: 100%;
-	height: 60px;
+	height: 70px;
 	background-color: #FFF;
 	position: fixed;
 	.container {
-		margin-top: 10px;
+		margin-top: 15px;
 		margin-left: 15px;
 		margin-right: 15px;
 	}
