--- a/views/layout.html
+++ b/views/layout.html
@@ -7,14 +7,30 @@
     <body>
         <!-- Navbar here -->
         <ul class="navigation">
-            <li><a href="/admin">Home</a></li>
-            <li><a href="/signup">Signup</a></li>
-            <li><a href="/login">Login</a></li>
-            <li><a href="/logout">Logout</a></li>
-            <li><a href="/addmember">Add member</a></li>
-            <li><a href="/maintenance">Date maintenance</a></li>
-            <li><a href="#">Reports</a></li>
-            <li><a href="#">Emails</a></li>
+            <li id="nav-home">
+                <a href="/admin">Home</a>
+            </li>
+            <li id="nav-signup">
+                <a href="/signup">Signup</a>
+            </li>
+            <li id="nav-login">
+                <a href="/login">Login</a>
+            </li>
+            <li id="nav-logout">
+                <a href="/logout">Logout</a>
+            </li>
+            <li id="nav-add-member">
+                <a href="/addmember">Add member</a>
+            </li>
+            <li id="nav-data-maintenance">
+                <a href="/maintenance">Data maintenance</a>
+            </li>
+            <li id="nav-reports">
+                <a href="#">Reports</a>
+            </li>
+            <li id="nav-emails">
+                <a href="#">Emails</a>
+            </li>
         </ul>
         {{{ content }}}
         <footer>
