--- a/views/new-member.html
+++ b/views/new-member.html
@@ -9,20 +9,26 @@
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
                 <h3>Member id</h3>
-                <input id="id" class="short" name="id">
+                <input id="add-member-id" class="short" name="id">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
                 <h3>Full name*</h3>
-                <input id="first-name" class="short" name="firstName" placeholder="First name">
+                <input id="add-member-first-name" class="short" name="firstName" placeholder="First name">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input id="last-name" class="short" name="lastName" placeholder="Last name">
+                <input id="add-member-initials" class="short" name="initials" placeholder="Initials">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <input id="add-member-last-name" class="short" name="lastName" placeholder="Last name">
             </div>
         </div>
 
@@ -31,16 +37,7 @@
                 <div class="couterContainer">
                     <h3>Title</h3>
                 </div>
-                <input id="title" class="short" name="title">
-            </div>
-        </div>
-
-        <div class="innerSectionContainer">
-            <div class="inner-section-divider-medium">
-                <div class="couterContainer">
-                    <h3>Date of birthday</h3>
-                </div>
-                <input id="birthday" class="short" type="date" name="birthday">
+                <input id="add-member-title" class="short" name="title">
             </div>
         </div>
 
@@ -53,25 +50,25 @@
                 <div class="couterContainer">
                     <h3>Address</h3>
                 </div>
-                <input id="address1" class="short" name="address1" placeholder="Address line 1">
+                <input id="add-member-address1" class="short" name="address1" placeholder="Address line 1">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input id="address2" class="short" name="address2" placeholder="Address line 2">
+                <input id="add-member-address2" class="short" name="address2" placeholder="Address line 2">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input id="address3" class="short" name="address3" placeholder="Address line 3">
+                <input id="add-member-address3" class="short" name="address3" placeholder="Address line 3">
             </div>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
-                <input id="address4" class="short" name="address4" placeholder="Address line 4">
+                <input id="add-member-address4" class="short" name="address4" placeholder="Address line 4">
             </div>
         </div>
 
@@ -80,15 +77,15 @@
                 <div class="couterContainer">
                     <h3>County</h3>
                 </div>
-                <input id="county" class="short-relative" name="county" placeholder="County name">
-                <input id="postcode"class="short-relative" name="postcode" placeholder="Postcode">
+                <input id="add-member-county" class="short-relative" name="county" placeholder="County name">
+                <input id="add-member-postcode"class="short-relative" name="postcode" placeholder="Postcode">
             </div>
         </div>
 
-        <div class="innerSectionContainer">
+        <div class="innerSectionContainer" style="display:none;">
             <div class="inner-section-divider-medium">
                 <h3>Deliverer</h3>
-                <input id="deliverer" class="short" name="deliverer">
+                <input id="add-member-deliverer" class="short" name="deliverer" value="post" disabled>
             </div>
         </div>
 
@@ -101,7 +98,7 @@
                 <div class="couterContainer">
                     <h3>Home phone</h3>
                 </div>
-                <input id="homePhone" class="short" name="homePhone">
+                <input id="add-member-home-phone" class="short" name="homePhone">
             </div>
         </div>
 
@@ -110,7 +107,7 @@
                 <div class="couterContainer">
                     <h3>Mobile phone</h3>
                 </div>
-                <input id="mobilePhone" class="short" name="mobilePhone">
+                <input id="add-member-mobile-phone" class="short" name="mobilePhone">
             </div>
         </div>
 
@@ -119,7 +116,7 @@
                 <div class="couterContainer">
                     <h3>Work phone</h3>
                 </div>
-                <input id="mobilePhone" class="short" name="workPhone">
+                <input id="add-member-work-phone" class="short" name="workPhone">
             </div>
         </div>
 
@@ -128,7 +125,7 @@
                 <div class="couterContainer">
                     <h3>Contact primary email</h3>
                 </div>
-                <input id="email1" class="short" name="email1">
+                <input id="add-member-email1" class="short" name="email1">
             </div>
         </div>
 
@@ -137,26 +134,7 @@
                 <div class="couterContainer">
                     <h3>Contact secondary email</h3>
                 </div>
-                <input id="email2" class="short" name="email2">
-            </div>
-        </div>
-
-
-        <div class="innerSectionContainer">
-            <div class="inner-section-divider-medium">
-                <!-- <h3 class="left">Email bounced?</h3> -->
-
-                 <div class="checkbox">
-                    <input id="check1" type="checkbox" name="check1" value="check1">
-                    <label for="check1"><h3 class="left">Email bounced?</h3></label>
-                </div>
-
-                <input type="checkbox" name="emailBounced" value="true">
-                <!-- <select name="emailBounced" class="short" style="color:#ccc;">
-                    <option class="meta" value="" disabled="" selected="">Click to select</option>
-                    <option value="true">Yes</option>
-                    <option value="false">No</option>
-                </select> -->
+                <input id="add-member-email2" class="short" name="email2">
             </div>
         </div>
 
@@ -188,16 +166,7 @@
                 <div class="couterContainer">
                     <h3>Date joined</h3>
                 </div>
-                <input class="short" type="date" name="dateJoined">
-            </div>
-        </div>
-
-        <div class="innerSectionContainer">
-            <div class="inner-section-divider-medium">
-                <div class="couterContainer">
-                    <h3>Date membership joined</h3>
-                </div>
-                <input class="short" type="date" name="dateTypeChanged">
+                <input id="add-member-data-joined" class="short" type="date" name="dateJoined">
             </div>
         </div>
 
@@ -206,7 +175,16 @@
                 <div class="couterContainer">
                     <h3>Date life membership paid</h3>
                 </div>
-                <input class="short" type="date" name="lifePaymentDate">
+                <input id="add-member-life-payment-date" class="short" type="date" name="lifePaymentDate">
+            </div>
+        </div>
+
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Due membership date</h3>
+                </div>
+                <input id="membership-due-date" class="short" type="date" name="dueDate" value="2015-01-01">
             </div>
         </div>
 
@@ -218,14 +196,9 @@
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
                 <div class="checkbox">
-                    <input id="check2" type="checkbox" name="check2" value="check2">
+                    <input id="check2" type="checkbox" name="giftAid" value="true">
                     <label for="check2"><h3 class="left">Gift aid</h3></label>
                 </div>
-                <!-- <select name="giftAid" class="short" style="color:#ccc;">
-                    <option class="meta" value="" disabled="" selected="">Click to select</option>
-                    <option value="true">Yes</option>
-                    <option value="false">No</option>
-                </select> -->
             </div>
         </div>
 
@@ -234,7 +207,12 @@
                 <div class="couterContainer">
                     <h3>Date gif aid signed</h3>
                 </div>
-                <input class="short" type="date" name="dateGiftAidSigned">
+                <input 
+                    id="add-member-date-gift-aid-signed" 
+                    class="short" 
+                    type="date" 
+                    name="dateGiftAidSigned"
+                >
             </div>
         </div>
 
@@ -243,44 +221,25 @@
                 <div class="couterContainer">
                     <h3>Date gif aid cancelled</h3>
                 </div>
-                <input class="short" type="date" name="dateGiftAidCancelled">
+                <input 
+                    id="add-member-date-gift-cancelled"
+                    class="short" 
+                    type="date" 
+                    name="dateGiftAidCancelled"
+                >
             </div>
         </div>
 
         <div class="topSectionDividor">
-            <h2>6. Payment info</h2>
-        </div>
-
-        <div class="innerSectionContainer">
-            <div class="inner-section-divider-medium">
-                <div class="checkbox">
-                    <input id="check3" type="checkbox" name="check3" value="check3">
-                    <label for="check3"><h3 class="left">Pays by standing order</h3></label>
-                </div>
-                <!-- <select name="standingOrder" class="short" style="color:#ccc;">
-                    <option class="meta" value="" disabled="" selected="">Click to select</option>
-                    <option value="true">Yes</option>
-                    <option value="false">No</option>
-                </select> -->
-            </div>
-        </div>
-
-
-        <div class="topSectionDividor">
-            <h2>7. Other</h2>
+            <h2>6. Other</h2>
         </div>
 
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
                  <div class="checkbox">
-                    <input id="check4" type="checkbox" name="check4" value="check4">
-                    <label for="check4"><h3 class="left">Online Member</h3></label>
+                    <input id="check4" type="checkbox" name="onlineMember" value="true">
+                    <label for="check4"><h3 class="left">News online</h3></label>
                 </div>
-                <!-- <select name="onlineMember" class="short" style="color:#ccc;">
-                    <option class="meta" value="" disabled="" selected="">Click to select</option>
-                    <option value="yes">Yes</option>
-                    <option value="no">No</option>
-                </select> -->
             </div>
         </div>
 
@@ -289,7 +248,7 @@
                 <div class="couterContainer">
                     <h3>Notes</h3>
                 </div>
-                <textarea name="membershipNotes"></textarea>
+                <textarea id="add-member-membership-notes" name="membershipNotes"></textarea>
             </div>
         </div>
 
@@ -300,7 +259,7 @@
             <div class="inner-section-divider-medium">
                 <button id="create-member-btn" class="button-one left" type="submit">Save</button>
                 <a href="javascript:history.back();">
-                    <button id="cancel_person" class="button-two right">Cancel</button>
+                    <button id="cancel-member-btn" class="button-two right">Cancel</button>
                 </a>
             </div>
         </div>
