--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -355,55 +355,58 @@ nav {
     height: 60px;
     text-align: center; }
     #table-payments .table-section-individual-header p {
-      font-size: 20px;
+      font-size: 16px;
       font-weight: bold; }
     #table-payments .table-section-individual-header .col-1 {
-      width: 20%;
+      flex: 3;
       border-right: 1px solid #ededed; }
     #table-payments .table-section-individual-header .col-2 {
-      width: 20%;
+      flex: 3;
       border-right: 1px solid #ededed; }
     #table-payments .table-section-individual-header .col-3 {
-      width: 20%;
+      flex: 2;
       border-right: 1px solid #ededed; }
     #table-payments .table-section-individual-header .col-4 {
-      width: 20%;
+      flex: 2;
       border-right: 1px solid #ededed; }
     #table-payments .table-section-individual-header .col-5 {
-      width: 20%;
+      flex: 2;
       border-right: 1px solid #ededed; }
     #table-payments .table-section-individual-header .col-6 {
-      width: 20%;
+      flex: 3;
       border-right: 1px solid #ededed; }
     #table-payments .table-section-individual-header .col-7 {
-      width: 20%; }
+      flex: 1; }
   #table-payments .table-section-individual-rows {
     overflow: scroll; }
     #table-payments .table-section-individual-rows .row {
       display: flex;
       width: 100%;
-      height: 60px; }
+      height: 50px;
+      line-height: 45px; }
+      #table-payments .table-section-individual-rows .row:hover {
+        background-color: #FFE5E5; }
       #table-payments .table-section-individual-rows .row p {
-        font-size: 15px;
+        font-size: 13px;
         padding: 5px;
         text-align: center; }
       #table-payments .table-section-individual-rows .row .col-1 {
-        flex: 1;
+        flex: 3;
         border-right: 1px solid #ededed; }
       #table-payments .table-section-individual-rows .row .col-2 {
-        flex: 1;
+        flex: 3;
         border-right: 1px solid #ededed; }
       #table-payments .table-section-individual-rows .row .col-3 {
-        flex: 1;
+        flex: 2;
         border-right: 1px solid #ededed; }
       #table-payments .table-section-individual-rows .row .col-4 {
-        flex: 1;
+        flex: 2;
         border-right: 1px solid #ededed; }
       #table-payments .table-section-individual-rows .row .col-5 {
-        flex: 1;
+        flex: 2;
         border-right: 1px solid #ededed; }
       #table-payments .table-section-individual-rows .row .col-6 {
-        flex: 1;
+        flex: 3;
         border-right: 1px solid #ededed; }
       #table-payments .table-section-individual-rows .row .col-7 {
         flex: 1; }
