--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -105,35 +105,35 @@ $color: #ededed;
 		height: 60px;
 		text-align: center;
 		p {
-			font-size: 20px;
+			font-size: 16px;
 			font-weight: bold;
 		}
 		.col-1 {
-			width: 20%;
+			flex: 3;
 			border-right: 1px solid $color;
 		}
 		.col-2 {
-			width: 20%;
+			flex: 3;
 			border-right: 1px solid $color;
 		}
 		.col-3 {
-			width: 20%;
+			flex: 2;
 			border-right: 1px solid $color;
 		}
 		.col-4 {
-			width: 20%;
+			flex: 2;
 			border-right: 1px solid $color;
 		}
 		.col-5 {
-			width: 20%;
+			flex: 2;
 			border-right: 1px solid $color;
 		}
 		.col-6 {
-			width: 20%;
+			flex: 3;
 			border-right: 1px solid $color;
 		}
 		.col-7 {
-			width: 20%;
+			flex: 1;
 		}
 	}
 	.table-section-individual-rows {
@@ -142,34 +142,38 @@ $color: #ededed;
 		.row {
 			display: flex;
 			width: 100%;
-			height: 60px;
+			height: 50px;
+			line-height: 45px;
+			&:hover {
+				background-color: #FFE5E5;
+			}
 			p {
-				font-size: 15px;
+				font-size: 13px;
 				padding: 5px;
 				text-align: center;
 			}
 			.col-1 {
-				flex: 1;
+				flex: 3;
 				border-right: 1px solid $color;
 			}
 			.col-2 {
-				flex: 1;
+				flex: 3;
 				border-right: 1px solid $color;
 			}
 			.col-3 {
-				flex: 1;
+				flex: 2;
 				border-right: 1px solid $color;
 			}
 			.col-4 {
-				flex: 1;
+				flex: 2;
 				border-right: 1px solid $color;
 			}
 			.col-5 {
-				flex: 1;
+				flex: 2;
 				border-right: 1px solid $color;
 			}
 			.col-6 {
-				flex: 1;
+				flex: 3;
 				border-right: 1px solid $color;
 			}
 			.col-7 {
