--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -41,7 +41,7 @@
 	p {
 		font-size: 15px;
 		margin-bottom: 5px;
-		margin-top: 5px; 
+		margin-top: 5px;
 	}
 	.col-1 {
 		width: 40%;
@@ -67,7 +67,7 @@
 // 	p {
 // 		font-size: 15px;
 // 		margin-bottom: 5px;
-// 		margin-top: 5px; 
+// 		margin-top: 5px;
 // 	}
 // 	.col-1 {
 // 		width: 40%;
@@ -139,14 +139,14 @@ $color: #ededed;
 	.table-section-individual-rows {
 		// height: 25em;
 		overflow: scroll;
+    .selected {
+      background-color: #FFE5E5;
+    }
 		.row {
 			display: flex;
 			width: 100%;
 			height: 50px;
 			line-height: 45px;
-			&:hover {
-				background-color: #FFE5E5;
-			}
 			p {
 				font-size: 13px;
 				padding: 5px;
