--- a/assets/css/pages/_search-member.scss
+++ b/assets/css/pages/_search-member.scss
@@ -12,6 +12,8 @@
 }
 
 .search-container {
+  border-bottom: 1px solid #dbdbdb;
+  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
 	height: auto;
 	max-width: 1000px;
 	background-color: #fff;
