--- a/assets/css/components/_input.scss
+++ b/assets/css/components/_input.scss
@@ -99,9 +99,9 @@ label:before {
     box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, .3), 0px 1px 0px 0px rgba(255, 255, 255, .8);
 }
 
-input[type=checkbox] {
-    display: none;
-}
+// input[type=checkbox] {
+//     display: none;
+// }
 
 .checkbox label:before {
     border-radius: 3px;
@@ -135,6 +135,10 @@ input[type=checkbox]:checked + label:before {
     cursor: pointer;
     opacity: 0;
     filter: alpha(opacity=0);
+}
+
+.input-width {
+    width: 320px;
 }
 
 // @media (max-width: $tablet) {
