--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -158,9 +158,6 @@ label:before {
   background-color: #aaa;
   box-shadow: inset 0px 2px 3px 0px rgba(0, 0, 0, 0.3), 0px 1px 0px 0px rgba(255, 255, 255, 0.8); }
 
-input[type=checkbox] {
-  display: none; }
-
 .checkbox label:before {
   border-radius: 3px; }
 
@@ -191,6 +188,9 @@ input[type=checkbox]:checked + label:before {
   cursor: pointer;
   opacity: 0;
   filter: alpha(opacity=0); }
+
+.input-width {
+  width: 320px; }
 
 nav {
   width: 100%;
