--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -343,6 +343,29 @@ nav {
     width: 40%;
     min-height: 100px; }
 
+#member-info-edit {
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  margin: 10px;
+  display: flex;
+  text-align: left;
+  padding: 20px;
+  overflow: scroll; }
+  #member-info-edit p {
+    font-size: 15px;
+    margin-bottom: 5px;
+    margin-top: 5px; }
+  #member-info-edit .col-1 {
+    width: 40%;
+    min-height: 100px; }
+  #member-info-edit .col-2 {
+    width: 40%;
+    min-height: 100px; }
+  #member-info-edit .col-3 {
+    width: 40%;
+    min-height: 100px; }
+
 #table-payments {
   width: 100%;
   height: 60%;
