--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -56,6 +56,35 @@
 		min-height: 100px;
 	}
 }
+
+#member-info-edit {
+	width: 100%;
+	height: 100%;
+	background-color: #fff;
+	margin: 10px;
+	display: flex;
+	text-align: left;
+	padding: 20px;
+	overflow: scroll;
+	p {
+		font-size: 15px;
+		margin-bottom: 5px;
+		margin-top: 5px;
+	}
+	.col-1 {
+		width: 40%;
+		min-height: 100px;
+	}
+	.col-2 {
+		width: 40%;
+		min-height: 100px;
+	}
+	.col-3 {
+		width: 40%;
+		min-height: 100px;
+	}
+}
+
 // .individual-section {
 // 	width: 100%;
 // 	height: 40%;
