i dont even know what this does

--- a/views/new-member.html
+++ b/views/new-member.html
@@ -125,7 +125,7 @@
                 <div class="couterContainer">
                     <h3>Contact primary email</h3>
                 </div>
-                <input id="add-member-email1" class="short" name="email1">
+                <input id="add-member-email1" class="short" name="primaryEmail">
             </div>
         </div>
 
@@ -134,7 +134,7 @@
                 <div class="couterContainer">
                     <h3>Contact secondary email</h3>
                 </div>
-                <input id="add-member-email2" class="short" name="email2">
+                <input id="add-member-email2" class="short" name="secondaryEmails">
             </div>
         </div>
 
@@ -248,7 +248,7 @@
                 <div class="couterContainer">
                     <h3>Notes</h3>
                 </div>
-                <textarea id="add-member-membership-notes" name="membershipNotes"></textarea>
+                <textarea id="add-member-membership-notes" name="notes"></textarea>
             </div>
         </div>
 
