--- a/views/new-member.html
+++ b/views/new-member.html
@@ -148,7 +148,7 @@
                 <div class="couterContainer">
                     <h3>Membership type</h3>
                 </div>
-                <select name="membershipType" class="short" style="color:#ccc;">
+                <select name="membershipType" id="add-member-membership-type" class="short" style="color:#ccc;">
                     <option class="meta" value="" disabled="" selected="">Click to select one</option>
                     <option value="Annual Single">Annual Single</option>
                     <option value="Annual Double">Annual Double</option>
@@ -166,7 +166,7 @@
                 <div class="couterContainer">
                     <h3>Date joined</h3>
                 </div>
-                <input id="add-member-data-joined" class="short" type="text" name="dateJoined">
+                <input id="add-member-date-joined" class="short" type="text" name="dateJoined">
             </div>
         </div>
 
@@ -196,8 +196,7 @@
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
                 <div class="checkbox">
-                    <input id="check2" type="checkbox" name="giftAid" value="true">
-                    <label for="check2"><h3 class="left">Gift aid</h3></label>
+                    <input id="add-member-gift-aid-signed" type="checkbox" name="giftAid" value="true">
                 </div>
             </div>
         </div>
