add beginning of payment tests (NOT WORKING)

--- a/assets/css/base/_fonts.scss
+++ b/assets/css/base/_fonts.scss
@@ -24,3 +24,7 @@ h2 {
 .info {
 	font-weight: bold;
 }
+
+body, html, p, h1, h2, h3, h4, h5, h6, h7, h8, input[type="text"], a {
+  font-family: 'Sorts Mill Goudy', serif;
+}
