--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,6 +16,9 @@ h2 {
 .info {
   font-weight: bold; }
 
+body, html, p, h1, h2, h3, h4, h5, h6, h7, h8, input[type="text"], a {
+  font-family: 'Sorts Mill Goudy', serif; }
+
 button, .button-one, .button-two {
   font-size: 20px;
   font-weight: 100;
