--- a/views/layout.html
+++ b/views/layout.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <link rel="stylesheet" href="/css/main.css">
+        <link href='http://fonts.googleapis.com/css?family=Sorts+Mill+Goudy' rel='stylesheet' type='text/css'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>  
+    </head>
     <body>
         <!-- Navbar here -->
         <ul class="navigation">
