end2end tests for creating members

--- a/views/new-member.html
+++ b/views/new-member.html
@@ -134,7 +134,7 @@
                 <div class="couterContainer">
                     <h3>Contact secondary email</h3>
                 </div>
-                <input id="add-member-email2" class="short" name="secondaryEmails">
+                <input id="add-member-email2" class="short" name="secondaryEmail">
             </div>
         </div>
 
